自動テスト実装

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ article {
 </style>
 
 <script type="module">
-import { zircon } from './zircon.mjs'
+import zircon from './zircon.mjs'
 
 const source = document.querySelector('#source')
 const debug = document.querySelector('article')
