#14 ラベル対応

--- a/test.html
+++ b/test.html
@@ -20,11 +20,11 @@
   "-1 - 2": -3,
   "-3--4": 1,
   "1 - - 2": 3,
-  "": "数値が見つかりません(1文字目)",
-  "a": "数値が見つかりません(1文字目)",
-  "+": "数値が見つかりません(2文字目)",
-  "++3": "数値が見つかりません(2文字目)",
-  "1+": "数値が見つかりません(3文字目)",
+  "": "シンボルが見つかりません(1文字目)",
+  "a": "aは定義されていません",
+  "+": "シンボルが見つかりません(2文字目)",
+  "++3": "シンボルが見つかりません(2文字目)",
+  "1+": "シンボルが見つかりません(3文字目)",
   "1 2": 2,
   "1 / 2": 0.5,
   "2 / 2": 1,
@@ -33,7 +33,8 @@
   "2 % 2": 0,
   "3 % 0": "0で除算できません",
   "p 1": 1,
-  "p 2 p 3": 3
+  "p 2 p 3": 3,
+  "a : 1 + 2 p a + a": 6
 }
 </textarea>
   <button type="button">テスト<br>実行</button>
@@ -51,6 +52,7 @@
   main {
     display: grid;
     grid-template-columns: 1fr max-content 1fr;
+    gap: 0.5em;
   }
 
   textarea {
