--- a/test.html
+++ b/test.html
@@ -32,9 +32,11 @@
   "1 % 2": 1,
   "2 % 2": 0,
   "3 % 0": "0で除算できません",
-  "p 1": 1,
-  "p 2 p 3": 3,
-  "a : 1 + 2 p a + a": 6
+  "? 1": 1,
+  "? 2 ? 3": 3,
+  "a : 1 + 2 ? a + a": 6,
+  "pow: do n { n * n } pow(3)": 9,
+  "add_double: do a, b { (a + b) * 2 } add_double(1, 2)": 6
 }
 </textarea>
   <button type="button">テスト<br>実行</button>
@@ -77,7 +79,6 @@
 
 <script type="module">
   import zircon from './zircon.mjs'
-  const run = source => zircon.run(zircon.parse(source), { out() { } })
   const test = document.querySelector("#test")
   const results = document.querySelector("#results")
   const nav = document.querySelector("nav")
@@ -87,7 +88,9 @@
     const corrects = Object.entries(JSON.parse(test.value)).map(([source, expect]) => {
       let result
       try {
-        result = run(source)
+        const ast = zircon.parse(source)
+        console.log(JSON.stringify(ast))
+        result = zircon.run(ast, { out() { } })
       } catch (e) {
         result = e
       }
