--- a/test.html
+++ b/test.html
@@ -43,7 +43,29 @@
   "if false { ? false }": null,
   "if true { ? 1 } ef true { ? 2 } else { ? 3 }": 1,
   "if false { ? 1 } ef true { ? 2 } else { ? 3 }": 2,
-  "if false { ? 1 } ef false { ? 2 } else { ? 3 }": 3
+  "if false { ? 1 } ef false { ? 2 } else { ? 3 }": 3,
+  "if 1 < 2 { 1 } else { 2 }": 1,
+  "if 1 < 1 { 1 } else { 2 }": 2,
+  "if 1 <= 2 { 1 } else { 2 }": 1,
+  "if 1 <= 1 { 1 } else { 2 }": 1,
+  "if 1 > 2 { 1 } else { 2 }": 2,
+  "if 1 > 1 { 1 } else { 2 }": 2,
+  "if 1 >= 2 { 1 } else { 2 }": 2,
+  "if 1 >= 1 { 1 } else { 2 }": 1,
+  "if 1 = 2 { 1 } else { 2 }": 2,
+  "if 1 = 1 { 1 } else { 2 }": 1,
+  "if 1 <> 2 { 1 } else { 2 }": 1,
+  "if 1 <> 1 { 1 } else { 2 }": 2,
+  "if 1 < 2 and 3 < 4 { true } else { false }": true,
+  "if 1 < 2 and 3 < 3 { true } else { false }": false,
+  "if 1 < 1 and 3 < 4 { true } else { false }": false,
+  "if 1 < 1 and 3 < 3 { true } else { false }": false,
+  "if 1 < 2 or 3 < 4 { true } else { false }": true,
+  "if 1 < 2 or 3 < 3 { true } else { false }": true,
+  "if 1 < 1 or 3 < 4 { true } else { false }": true,
+  "if 1 < 1 or 3 < 3 { true } else { false }": false,
+  "if not 1 < 2 { true } else { false }": false,
+  "if not 1 < 1 { true } else { false }": true
 }
 </textarea>
   <button type="button">テスト<br>実行</button>
@@ -61,7 +83,6 @@
   main {
     display: grid;
     grid-template-columns: 1fr max-content 1fr;
-    gap: 0.5em;
   }
 
   textarea {
@@ -71,6 +92,15 @@
 
   ul {
     text-align: center;
+  }
+
+  ul, ol {
+    margin: 0;
+  }
+
+  code, label {
+    border: 1px solid silver;
+    padding: 0.25em 0.5em;
   }
 
   nav,
