--- a/test.html
+++ b/test.html
@@ -66,7 +66,8 @@
   "if 1 < 1 or 3 < 4 { true } else { false }": true,
   "if 1 < 1 or 3 < 3 { true } else { false }": false,
   "if not 1 < 2 { true } else { false }": false,
-  "if not 1 < 1 { true } else { false }": true
+  "if not 1 < 1 { true } else { false }": true,
+  "addN: do n { do m { n + m } } add3: addN(3) add3(1)": 4
 }
 </textarea>
   <button type="button">テスト<br>実行</button>
