--- a/test.html
+++ b/test.html
@@ -20,11 +20,11 @@
   "-1 - 2": -3,
   "-3--4": 1,
   "1 - - 2": 3,
-  "": "シンボルが見つかりません(1文字目)",
+  "": "シンボルが見つかりません(1文字目 \\\\\\\\\\)",
   "a": "aは定義されていません",
-  "+": "シンボルが見つかりません(2文字目)",
+  "+": "シンボルが見つかりません(2文字目 \\+\\\\\\)",
   "++3": 3,
-  "1+": "シンボルが見つかりません(3文字目)",
+  "1+": "シンボルが見つかりません(3文字目 1+\\\\\\)",
   "1 2": 2,
   "1 / 2": 0.5,
   "2 / 2": 1,
@@ -67,7 +67,12 @@
   "if 1 < 1 or 3 < 3 { true } else { false }": false,
   "if not 1 < 2 { true } else { false }": false,
   "if not 1 < 1 { true } else { false }": true,
-  "addN: do n { do m { n + m } } add3: addN(3) add3(1)": 4
+  "addN: do n { do m { n + m } } add3: addN(3) add3(1)": 4,
+  "(1, 2, 3).0": 1,
+  "(1, 2, 3).1": 2,
+  "(1, 2, 3).2": 3,
+  "(1, 2, 3).4": null,
+  "(1, 2, 3).(-1)": 3
 }
 </textarea>
   <button type="button">テスト<br>実行</button>
