--- a/test.html
+++ b/test.html
@@ -72,7 +72,11 @@
   "(1, 2, 3).1": 2,
   "(1, 2, 3).2": 3,
   "(1, 2, 3).4": null,
-  "(1, 2, 3).(-1)": 3
+  "(1, 2, 3).(-1)": 3,
+  "'abc'": "abc",
+  "'ab''c'": "ab'c",
+  "''''": "'",
+  "''''''": "''"
 }
 </textarea>
   <button type="button">テスト<br>実行</button>
@@ -90,6 +94,7 @@
   main {
     display: grid;
     grid-template-columns: 1fr max-content 1fr;
+    align-items: flex-start;
   }
 
   textarea {
