--- a/test.html
+++ b/test.html
@@ -83,7 +83,9 @@
   "123 & 456": "123456",
   "'' ??& 'empty'": "empty",
   "'abc' ??& 'empty'": "abc",
-  "null": null
+  "null": null,
+  "null.method": "methodは定義されていません",
+  "null?.method": null
 }
 </textarea>
   <button type="button">テスト<br>実行</button>
