--- a/test.html
+++ b/test.html
@@ -37,11 +37,11 @@
   "2 /% 2": 1,
   "3 /% 0": "0で除算できません",
   "? 1": 1,
-  "? 2 ? 3": 3,
-  "a : 1 + 2 ? a + a": 6,
-  "pow: do n { n * n } pow(3)": 9,
+  "? 2;? 3": 3,
+  "a : 1 + 2;? a + a": 6,
+  "pow: do n { n * n };pow(3)": 9,
   "4 ^ 3 ^ 2": 262144,
-  "add_double: do a, b { (a + b) * 2 } add_double(1, 2)": 6,
+  "add_double: do a, b { (a + b) * 2 };add_double(1, 2)": 6,
   "if 1 { ? 1 }": 1,
   "if 0 { ? 0 }": null,
   "if true { ? true }": true,
@@ -71,7 +71,7 @@
   "if 1 < 1 or 3 < 3 { true } else { false }": false,
   "if not 1 < 2 { true } else { false }": false,
   "if not 1 < 1 { true } else { false }": true,
-  "addN: do n { do m { n + m } } add3: addN(3) add3(1)": 4,
+  "addN: do n { do m { n + m } };add3: addN(3);add3(1)": 4,
   "(1, 2, 3).0": 1,
   "(1, 2, 3).1": 2,
   "(1, 2, 3).2": 3,
@@ -93,8 +93,8 @@
   "false": false,
   "null.method": "methodは定義されていません",
   "null?.method": null,
-  "a: do { 1 } b: a b()": 1,
-  "fib: do n { if n > 2 { fib(n - 1) + fib(n - 2) } else { 1 } } (fib(1) fib(2) fib(3) fib(4) fib(5) fib(6))": [1, 1, 2, 3, 5, 8],
+  "a: do { 1 };b: a;b()": 1,
+  "fib: do n { if n > 2 { fib(n - 1) + fib(n - 2) } else { 1 } };(fib(1),fib(2),fib(3),fib(4),fib(5),fib(6))": [1, 1, 2, 3, 5, 8],
   "1.2": 1.2,
   "0.1": 0.1,
   "-1.23": -1.23,
@@ -142,6 +142,7 @@
   code, label {
     border: 1px solid silver;
     padding: 0.25em 0.5em;
+    word-break: break-all;
   }
 
   nav,
