型指定追加

--- a/test.html
+++ b/test.html
@@ -105,7 +105,8 @@
   "false.type": "Boolean",
   "null.type": "Null",
   "(1, 2).type": "Tuple",
-  "do{}.type": "Do"
+  "do{}.type": "Do",
+  "f: do@String a@Integer, b@String { a & b }; f(1, 'a')": "1a"
 }
 </textarea>
   <button type="button">テスト<br>実行</button>
